# twaddle

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  function-registry-design.md  pyproject.toml  pyproject_backup.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-publish.yml
docs/: abbreviations.md  basics.md  block_functions.md  blocks.md  boolean_logic.md  boolean_predicates.md  branching.md  capitalization.md  clipboard.md  dictionaries.md  dictionary_spec.md  errors.md  functions.md  indefinite_articles.md  index.md  introduction.md  lookups.md  loops.md  patterns.md  persistent.md  regex.md  runner.md  sentences.md  strict.md  synchronizers.md  using.md
pyrant/: __main__.py  interactive.py  rant.py  rant_block_factory.py  rant_exceptions.py  rant_function_factory.py  rant_lexer.py  rant_lookup_factory.py  rant_object.py  rant_parser.py  rant_token.py
pyrant/interpreter/: block_attributes.py  formatter.py  formatting_object.py  formatting_strategy.py  function_definitions.py  function_dict.py  interpreter.py  regex_state.py  synchronizer.py
pyrant/lexer/: lexer.py  lexer_tokens.py  rant_lexer.py  rant_token.py
pyrant/lookup/: lookup.py
pyrant/parser/: compiler.py  compiler_objects.py  compiler_utils.py  rant_block_factory.py  rant_compiler.py  rant_function_factory.py  rant_lookup_factory.py  rant_object.py  rant_parser.py  rant_parser_utils.py
pyrant/rant/: rant.py
pyrant/tests/: test_rant_exceptions.py
test/: test_rant.py  test_rant_block_factory.py  test_rant_function_factory.py  test_rant_lexer.py  test_rant_lookup_factory.py  test_rant_object.py  test_rant_parser.py  test_rant_token.py
test/interpreter/: test_block_attributes.py  (+3 more)
twaddle/: __init__.py  __main__.py  exceptions.py  runner.py
(+89 files in other folders)
