[project]
name = "twaddle"
version = "1.1.0"
description = "Text generation and templating"
authors = [
    {name = "Chris Hengler",email = "chrysics@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=7.2.0)"
]
    
[project.urls]
documentation = "https://chrishengler.github.io/twaddle/"
repository = "https://github.com/chrishengler/twaddle"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
