[tool.poetry]
name = "twaddle"
version = "1.8.1"
description = "Text generation and templating"
authors = ["Chris Hengler <chrysics@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "twaddle" }]
include = ["twaddle/py.typed"]

[tool.poetry.urls]
documentation = "https://chrishengler.github.io/twaddle/"
repository = "https://github.com/chrishengler/twaddle"

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
lark = "^1.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Exclude generated parser
exclude = '(^|/)twaddle/parser/twaddle_parser.py$'

[tool.isort]
profile = "black"
skip = ["twaddle/parser/twaddle_parser.py"]